[package]
name = "yaml-rust-davvid"
version = "0.5.0" # remember to update html_root_url
authors = [
    "Yuheng Chen <yuhengchen@sensetime.com>",
    "David Aguilar <davvid@gmail.com>"
]
homepage = "https://davvid.github.io/yaml-rust"
documentation = "https://docs.rs/yaml-rust"
license = "MIT/Apache-2.0"
description = "The missing YAML 1.2 parser for rust"
repository = "https://github.com/davvid/yaml-rust"
readme = "README.md"
edition = "2018"

[dependencies]
linked-hash-map = "0.5.3"

[dev-dependencies]
quickcheck = "0.9"
