[package]
name = "yaml-rust-davvid"
version = "0.5.2" # remember to update html_root_url
authors = [
    "Yuheng Chen <yuhengchen@sensetime.com>",
    "David Aguilar <davvid@gmail.com>"
]
homepage = "https://davvid.github.io/yaml-rust"
documentation = "https://docs.rs/yaml-rust"
license = "MIT/Apache-2.0"
description = "The missing YAML 1.2 parser for rust"
repository = "https://github.com/davvid/yaml-rust"
readme = "README.md"
edition = "2021"

[dependencies]
hashlink = "0.8"

[dev-dependencies]
quickcheck = "0.9"
