[package]
name = "yaml-rust-olidacombe"
version = "0.6.0"
authors = [
    "Yuheng Chen <yuhengchen@sensetime.com>",
    "David Aguilar <davvid@gmail.com>",
]
documentation = "https://docs.rs/yaml-rust-olidacombe"
license = "MIT/Apache-2.0"
description = "The missing YAML 1.2 parser for rust"
repository = "https://github.com/olidacombe/yaml-rust"
readme = "README.md"
edition = "2021"

[dependencies]
encoding = "0.2"
hashlink = "0.8"

[dev-dependencies]
quickcheck = "1.0"
